--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -6,7 +6,7 @@
         {% comment %} context 변수 사용 {% endcomment %}
         {% comment %} <li><a href="/polls/{{question.id}}">{{question.question_text}}</a></li> {% endcomment %}
         {% comment %} url파일에 설정해 준 name 사용 {% endcomment %}
-        <li><a href="{% url 'detail' question.id %}">{{question.question_text}}</a></li>
+        <li><a href="{% url 'polls:detail' question.id %}">{{question.question_text}}</a></li>
     {% endfor %}
 </ul>
 {% else %}
