--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,5 +1,5 @@
 <!-- form 생성 -->
-<form action='#' method='post'>
+<form action={% url 'polls:vote' question.id %} method='post'>
     {% csrf_token %}
     <h1> {{question.question_text}} </h1>
     {% for choice in question.choice_set.all %}
